@@ -127,8 +127,21 @@ static register_goal_factory<target_unit_goal>
 	goal_factory("");
 
 
-static register_goal_factory<protect_goal>
+static register_goal_factory<protect_location_goal>
 	goal_factory_protect("protect");
+
+
+static register_goal_factory<protect_location_goal>
+	goal_factory_protect_location("protect_location");
+
+
+static register_goal_factory<protect_my_unit_goal>
+	goal_factory_protect_my_unit("protect_my_unit");
+
+
+static register_goal_factory<protect_unit_goal>
+	goal_factory_protect_unit("protect_unit");
+
 
 // =======================================================================
 // Aspects
